--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Emacs.el
-subtitle: Emacs Podcast
+full_title:  Emacs.el Podcast
 description: > # this means to ignore newlines until "baseurl:"
   Emacs.el, the podcast where we talk about Emacs and nothing but Emacs!
   We talk about packages, cool configs, and people who make all of this
