--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,5 +1,5 @@
 main:
-  - title: Episodes
+  - title: All Episodes
     url: /episodes
     order: 10
   - title: Tags
@@ -10,15 +10,15 @@ main:
     order: 30
 
 social:
-  - title: GitHub
-    url: https://github.com/emacsel
-    order: 10
   - title: Twitter
     url: https://twitter.com/emacsel
-    order: 20
+    order: 10
   - title: Mastodon
     url: https://mastodon.social/@emacsel
-    order: 30
+    order: 20
   - title: Matrix
     url: https://riot.im/app/#/room/#emacsel:matrix.org
+    order: 30
+  - title: GitHub
+    url: https://github.com/emacsel
     order: 40
