s/cdn\.emacsel\.com/dl\.emacsel\.com/g
We were using CloudFront & S3 from AWS's free tier for the past year.
Now that that's expired, move the files to my personal server.

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ collections:
     permalink: /:collection/:path
 
 podcast_url: "https://emacsel.com"
-podcast_cdn: "https://cdn.emacsel.com"
+podcast_cdn: "https://dl.emacsel.com"
 podcast_cdn_baseurl: "/episodes"
 podcast_album_art: /img/emacsel.png
 podcast_title: Emacs.el
